--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Aibo Feng, Alexander Yuan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "sqlite": "^4.2.1",
