--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "Aibo Feng, Alexander Yuan",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6"
